app/assets/stylesheets/pages/_invoice.scss
.invoice-wrapper {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  padding: 2rem;
  background-color: #f8f8f8;
  flex-direction: column;
  min-height: 84vh;
}

.invoice-container {

  width: 100%;
  padding-right: 8px;
  max-width: 800px;


  h1 {
    color: $dark-green;
    margin-bottom: 2rem;

  }

  p {
    color: $dark-green;
  }

  h1 {
    text-align: center;
    font-size: 1.5rem;
  }

  h2 {
    font-size: 0.8rem;
  }

  p {
    font-size: 0.9rem;
    margin: 0.5rem 0;
  }

}

.user-details {
  display: flex;
  justify-content: space-between;

  p {
    font-size: 0.9rem;
    // margin-bottom: 0;
  }
}

.header {
  display: flex;
  justify-content: space-between;
  border-bottom: 2px solid #2c3e50;
  padding-bottom: 0.5rem;
  margin-bottom: 1rem;

  h2 {
    margin: 0;
  }
}

.invoice-table {
  margin-top: 4rem;
  margin-bottom: 1rem;

  h1 {
    font-size: 1rem;
    ;
  }
}

.quantity-description {
  display: flex;
  min-width: 70px;

  p {
    display: flex;
    justify-content: center;
  }
}

.quantity {
  min-width: 80px;
}

.invoice-item {
  display: flex;
  justify-content: space-between;
  // border-bottom: solid black;
  // margin: 4px 0;
  border-bottom: 1px solid #ddd;
  padding: 0.5rem 1rem;

  p {
    font-size: 0.8rem;
    margin-bottom: 0;
  }
}

.invoice-total {
  display: flex;
  justify-content: right;

  p {
    border-bottom: solid black;
    font-size: 1.3rem;
    font-weight: bold;
  }
}

.payment-container {
  max-width: 40rem;
  color: $dark-green;

  .snapscan {
    flex-shrink: 4;
  }

  h2 {
    font-size: 1rem;
    margin-top: 1rem;
  }

  color: $dark-green;

  h3 {
    font-size: 0.9rem;
    margin-top: 1rem;
  }

  p {
    font-size: 0.8rem;
    // margin-bottom: 0px
  }
}

.payment-options {
  display: flex;
  justify-content: space-between;

  // flex-direction: column;

  h1 {
    font-size: 1rem;
  }

  .pay-btn {
    background-color: $dark-yellow;
    border-radius: 50px;
    padding: 8px 32px;
    // margin-left: 16px;
    transition: all 0.3s ease;
    max-width: fit-content;
    margin-top: 1rem;
    text-decoration: none;

    a {
      text-decoration: none;
      color: white;
    }

    p {
      color: white;
      font-size: 1rem;
    }
  }

}



@media (max-width: 425px) {
  .payment-options {
    display: flex;
    flex-direction: column;

    h1 {
      margin-top: 1rem;
      text-align: left;
    }

  }

  .user-details {
    display: flex;
    flex-direction: column;
  }
}

